# oz_02_collabo-003-BE

./: .gitignore  README.md  gpt.py  gunicorn_conf.py  manage.py  pyproject.toml  requirements.txt
.aws/: credentials
.ebextensions/: django.config
Kluck/: asgi.py  settings.py  urls.py  wsgi.py
Kluck_config/: asgi.py  settings.py  urls.py  wsgi.py
admin_settings/: apps.py  models.py  serializers.py  urls.py  views.py
admin_settings/migrations/: 0001_initial.py  0002_adminsetting_term_date_adminsetting_term_time.py  0002_alter_adminsetting_push_time_and_more.py
admins/: admin.py  models.py  readme.md  serializers.py  urls.py  views.py
admins/migrations/: 0001_initial.py  0002_alter_admin_create_date.py  0002_remove_kluck_admin_adms_id.py  0003_admin_last_date.py  0004_alter_admin_admin_id_alter_admin_cell_num_and_more.py  0005_rename_user_pw_admin_admin_pw.py  0006_rename_admin_pw_admin_password_admin_last_login.py  0007_remove_admin_admin_id_remove_admin_permission_and_more.py  0008_admin_admin_id.py  0009_admin_is_staff_admin_is_superuser.py  0010_admin_groups_admin_is_active_admin_user_permissions.py  0011_remove_admin_admin_user.py
gpt_prompt/: apps.py
gpt_prompts/: apps.py  cron.py  models.py  readme.md  scheduler.py  serializers.py  urls.py  urls_gpt.py  urls_test.py  views.py
kluck_notifications/: apps.py  cron.py  kluck_push.py  models.py  push_scheduler.py  serializers.py  urls.py  views.py
luck_messages/: apps.py  models.py  readme.md  serializers.py  tests.py  urls.py  urls_admin.py  views.py
messages/: apps.py
(+8 files in other folders)
