[tool.poetry]
name = "kluckdev"
version = "0.1.0"
description = ""
authors = ["Hyunminmax <hyunmin.shin81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
mysqlclient = "^2.2.4"
flake8 = "^7.0.0"
black = "^24.4.2"
django-allauth = "^0.62.1"
djangorestframework = "^3.15.1"
drf-spectacular = "^0.27.2"
drf-yasg = "^1.21.7"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
