[tool.poetry]
name = "kluckdev"
version = "0.1.0"
description = ""
authors = ["Hyunminmax <hyunmin.shin81@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
django = "^5.0.4"
mysqlclient = "^2.2.4"
flake8 = "^7.0.0"
black = "^24.4.2"
django-allauth = "^0.62.1"
djangorestframework = "^3.15.1"
drf-spectacular = "^0.27.2"
setuptools = "^69.5.1"
openai = "^1.26.0"
gunicorn = "^22.0.0"
django-cors-headers = "^4.3.1"
apscheduler = "^3.10.4"
cement = "2.8.2"
awsebcli = "3.20.10"
djangorestframework-simplejwt = "^5.3.1"
firebase-admin = "^6.5.0"
django-crontab = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"